# net_flow_opt

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
core/: amosa.py  exceptions.py  moga.py  run.py  scheduler.py  system.py  tests.py  utils.py
data/: continuous_hv_r2.csv  continuous_hv_r3.csv  continuous_hv_r4.csv  continuous_hv_r5.csv  continuous_r2.csv  continuous_r3.csv  continuous_r4.csv  continuous_r5.csv  discrete_hv_r2.csv  discrete_hv_r3.csv  discrete_hv_r4.csv  discrete_hv_r5.csv  discrete_r2  discrete_r2.csv  discrete_r3  discrete_r3.csv  discrete_r4  discrete_r4.csv  discrete_r5  discrete_r5.csv
data/systems_data/: paper.csv  paper_evolution1.csv
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/core/: moga.doctree  scheduler.doctree  system.doctree
docs/_sources/: index.rst.txt
docs/core/: moga.html  run.html  scheduler.html  system.html
flask_app/: __init__.py  auth.py  forms.py  models.py  routes.py
flask_app/dashboard/: dashboard.py  layout.py
flask_app/templates/: index.html  layout.html  login.html
net_flow_opt/: base_model.py  callbacks.py  continuous_model.py  discrete_model.py  model.py  moga.py  network.py  run.py  sampling.py  scheduler.py  tests.py  utils.py
notebooks/: compare.ipynb  continuous.ipynb  discrete.ipynb
tests/: test_continuous.py  test_discrete.py  test_models.py  test_new_structure.py
(+9 files in other folders)
