[tool.poetry]
name = "net-flow-opt"
version = "0.1.0"
description = ""
authors = ["Michele Urbani <michele@didatec.com>"]
readme = "README.md"
packages = [{include = "net_flow_opt"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.10.1"
pandas = "^2.0.1"
networkx = "^3.1"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
plotly = "^5.14.1"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
